# rusty-htmx

./: .gitignore  Cargo.toml  README.md  build.rs
client/: package-lock.json  package.json  tailwind.config.js  vite.config.js
client/src/: _common.css  app.js  index.html  layout.html
src/: log.rs  main.rs  marketing.rs  session.rs  shop.rs
src/shop/: gateway.rs  mod.rs  model.rs  web.rs
templates/: README.md  about.html  cart-drawer.html  cart-updated.html  cart.html  header.html  home.html  layout.html  shop.html  styled.html
templates/_CLIENT_/: layout.html  manifest.json
templates/_CLIENT_/assets/: layout.4ebe49f9.js  layout.8aa3b765.css  layout.eb894560.css
