[package]
name = "rusty-htmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
http = "0.2.9"
minijinja = { version = "1.0.7", features = ["builtins", "loader"] }
once_cell = "1.18.0"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.4.3", features = ["fs"] }
tower-livereload = "0.8.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
